--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -r esm index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./**/*.js --ignore-pattern node_modules/"
+    "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/"
   },
   "husky": {
     "hooks": {
